# solana-dummy-contracts-and-scripts

./: Anchor.toml  Cargo.toml  README.md  call_and_its_transfer_example.json  gas_and_call_example.json  id.txt  package-lock.json
programs/gas_service/: Cargo.toml
programs/gas_service/src/: lib.rs
programs/program_tester/: Cargo.toml
programs/program_tester/src/: lib.rs
scripts/: Cargo.toml
tests/: program_tester.ts
