[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
anyhow = "1.0.98"
solana-client = "2.3.7"
solana-keypair = "3.0.0"
solana-program = "2.2"
solana-pubkey = "3.0.0"
solana-sdk = "2.2.0"
solana-signer = "3.0.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
solana-transaction-status-client-types = "2.3.7"
sha2 = "0.10"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
base64 = "0.21"
bs58 = "0.4"
borsh = "1.5.7"

[lib]
name = "scripts"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "transaction_maker"
path = "src/bin/transaction_maker.rs"

[[bin]]
name = "event_trigger"
path = "src/bin/event_trigger.rs"

[[bin]]
name = "my_listener"
path = "src/bin/my_listener.rs"

[[bin]]
name = "get_logs"
path = "src/bin/get_logs.rs"

[[bin]]
name = "batch_maker"
path = "src/bin/batch_maker.rs"

[[bin]]
name = "emit_cpi_trigger"
path = "src/bin/emit_cpi_trigger.rs"

[[bin]]
name = "trigger_gas_refund"
path = "src/bin/trigger_gas_refund.rs"

[[bin]]
name = "trigger_gas_add"
path = "src/bin/trigger_gas_add.rs"

[[bin]]
name = "trigger_gas_and_call"
path = "src/bin/trigger_gas_and_call.rs"

[[bin]]
name = "trigger_approve_message"
path = "src/bin/trigger_approve_message.rs"

[[bin]]
name = "trigger_execute_message"
path = "src/bin/trigger_execute_message.rs"

[[bin]]
name = "trigger_deployment_started"
path = "src/bin/trigger_deployment_started.rs"

[[bin]]
name = "trigger_interchain_transfer"
path = "src/bin/trigger_interchain_transfer.rs"

[[bin]]
name = "trigger_metadata_registered"
path = "src/bin/trigger_metadata_registered.rs"

[[bin]]
name = "trigger_link_token_started"
path = "src/bin/trigger_link_token_started.rs"

[[bin]]
name = "trigger_call_contract"
path = "src/bin/trigger_call_contract.rs"

[[bin]]
name = "trigger_signers_rotated"
path = "src/bin/trigger_signers_rotated.rs"

[[bin]]
name = "initialize_programs"
path = "src/bin/initialize_programs.rs"
