[package]
name = "gas_service"
version = "0.1.0"
description = "Gas Service Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gas_service"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
solana-program = "2.2"
program_tester = { path = "../program_tester", features = ["cpi"] }

